<resources>
    <string name="app_name">VP Manager</string>
    <string name="dummyDate">22.01.2022 um 18 Uhr</string>
    <string name="dummyStudy">Studie A</string>
    <string name="homeFindStudy">STUDIEN FINDEN</string>
    <string name="homeCreateStudy">STUDIEN ERSTELLEN</string>
    <string name="homeTopicAppointments">Anstehende Termine</string>
    <string name="pieSliceLabelSafe">Safe</string>
    <string name="pieSliceLabelParticipation">Participation</string>
    <string name="pieSliceLabelPlanned">Planned</string>
    <string name="pieSliceLabelRemaining">Remaining</string>
    <string name="personalAccount">Persönliche Übersicht</string>
    <string name="overview">Übersicht</string>
    <string name="welcome">Willkommen beim VP-Manager! \nHier können Sie Ihre Versuchspersonenstunden planen, Ihren aktuellen Fortschritt betrachten und selbst Studien erstellen.</string>
    <string name="vpState">Laut aktueller Planung des VP-Managers haben Sie zum</string>
    <string name="vps">VP-Stunden</string>
    <string name="collected">gesammelt</string>
    <string name="openVps">Es fehlen Ihnen noch</string>
    <string name="vpsDot">VP-Stunden.</string>
    <string name="findStudies">Jetzt Studien finden</string>
    <string name="matNumberText">Mithilfe Ihrer Matrikelnummer können die aktuell im Lehrstuhl verbuchten Versuchspersonenstunden angezeigt werden.</string>
    <string name="matNumberRequired">Matrikelnummer eingeben</string>
    <string name="officialVps">Im Lehrstuhl bereits eingetragene VP-Stunden</string>
    <string name="noVps">0/15</string>
    <string name="nextAppointments">Nächste Termine</string>
    <string name="allAppointments">Alle Termine ansehen</string>
    <string name="warning">Achtung!</string>
    <string name="leavePageWarning">Wenn Sie diesen Bereich verlassen gehen Ihre Änderungen verloren! Wollen Sie trotzdem verlassen?</string>
    <string name="cancelNavigation">Abbrechen</string>
    <string name="leavePage">"Verlassen"</string>
    <string name="createStudyDesc">Studienbeschreibung</string>
    <string name="createAddDateButton">Termine hinzufügen</string>
    <string name="createCreateButton">Studie erstellen</string>
    <string name="createPlatformHint">Primär Plattform*</string>
    <string name="createPlatformHint2">Sekundär Plattform</string>
    <string name="createLocationHint">Ort*</string>
    <string name="createRoomHint">Raum</string>
    <string name="createStreetHint">Straße</string>
    <string name="createAlertBase">Bitten tragen Sie die fehlenden Angaben ein:</string>
    <string name="createAlertStudyDesc">Studienbeschreibung*</string>
    <string name="createAlertExecutionType">Durchführungsart</string>
    <string name="createAlertCategory">Kategorie \n</string>
    <string name="createAlertLocation">Durchführungsort</string>
    <string name="createAlertOptionalBase">Sind Sie sicher das Sie ohne folgende Angaben fortfahren wollen:</string>
    <string name="createAlertVP">VP-Stunden</string>
    <string name="createAlertRoom">Raum*</string>
    <string name="createAlertStreet">Adresse*</string>
    <string name="createAlertPlatform">Plattform</string>
    <string name="createAlertDates">Termine</string>
    <string name="remoteString">Remote</string>
    <string name="presenceString">Präsenz</string>
    <string name="createOfferedVP">Angebotene VP-Stunden</string>
    <string name="createStudyTitleHint">Titel der Studie</string>
    <string name="createStudyTitle">Titel</string>
    <string name="createStudyExe">Durchführungsart</string>
    <string name="createStudyContact">Kontaktmöglichkeit</string>
    <string name="fragment_create_study_pageOneTitle">Basisinformationen</string>
    <string name="fragment_create_study_pageBaseDesc">Geben Sie in den folgenden Schritten alle relevanten Informationen zu Ihrer Studie an. \n\n Bevor Sie diese am Ende veröffentlichen, können Sie Ihre Eingaben noch einmal überprüfen und Änderungen vornehmen. \n\n Potenzielle Teilnehmer finden Ihren Eintrag anschließend im Reiter \"Studie finden\" und können sich dort für einen Termin eintragen.</string>
    <string name="fragment_create_study_desc_page_one">Unter folgendem Namen wird anschließend ein Eintrag in der Studienliste erstellt.</string>
    <string name="fragment_create_study_desc_page_two">Hier können sie genauere Details zum Studienablauf und konreten Inhalten bereitstellen.</string>
    <string name="fragment_create_study_pageBaseTitle">Willkommen</string>
    <string name="fragment_create_study_pageOneContactTitle">Kommunikation</string>
    <string name="fragment_create_study_pageOneContact_Hint_Contact">Mail*</string>
    <string name="fragment_create_study_pageOneContact_Hint_Contact2">Handynummer</string>
    <string name="fragment_create_study_pageOneContact_Hint_Contact3">Skype</string>
    <string name="fragment_create_study_pageOneContact_Hint_Contact4">Discord</string>
    <string name="fragment_create_study_pageOneContact_Hint_Contact5">Sonstige</string>
    <string name="fragment_create_study_desc_page_one_contact">So können potenzielle Teilnehmer sie alternativ erreichen: </string>
    <string name="fragment_create_study_pageThreeTitle">Kategorie</string>
    <string name="fragment_create_study_desc_page_four_remote">Präferierte Streaming-Dienste für die Remote Ausführung, wie Zoom, Skype oder Discord können hier hinterlegt werden.</string>
    <string name="fragment_create_study_desc_page_four_presence">Unter folgender Adresse soll die Studie durchgeführt werden:</string>
    <string name="fragment_create_study_desc_page_three">Ordnen Sie hier Ihre Studie einer der thematischen Kategorien zu. \n\n Die Durchführungsart bezieht sich auf den lokalen Kontext (Remote / Präsenz).</string>
    <string name="fragment_create_study_pageFourTitle">Ortsangaben</string>
    <string name="fragment_create_study_pageFourTitleTwo">Plattform</string>
    <string name="fragment_create_study_pageFiveTitle">Termine</string>
    <string name="fragment_create_study_desc_page_five">Wählen sie hier Termine aus, an denen sich potenzielle Teilnehmer für ihre Studie einschreiben können.</string>
    <string name="fragment_create_study_pageFive_fab">Neuer Termin</string>
    <string name="fragment_create_study_pageFinalTitle">Bestätigung</string>
    <string name="fragment_create_study_base_next">Weiter</string>
    <string name="fragment_create_study_base_back">Zurück</string>
    <string name="fragment_create_study_base_create">Erstellen</string>
    <string name="fragment_create_study_finalPage_title_three">Terminbestätigung</string>
    <string name="progressbar_one">Basis</string>
    <string name="progressbar_two">Beschreibung</string>
    <string name="progressbar_three">Ort</string>
    <string name="progressbar_four">Termine</string>
    <string name="progressbar_five">Bestätigen</string>
    <string-array name="createCategoryList">
        <item>Studienkategorie</item>
        <item>Feldstudie</item>
        <item>Fokusgruppe</item>
        <item>Fragebogen</item>
        <item>Gamingstudie</item>
        <item>Interview</item>
        <item>Laborstudie</item>
        <item>Tagebuchstudie</item>
        <item>Usability/UXstudie</item>
        <item>Sonstige</item>
    </string-array>
    <string-array name="createExecutionTypeList">
        <item>Durchführungsart</item>
        <item>Remote</item>
        <item>Präsenz</item>
    </string-array>
    <string-array name="createPresetLabList">
        <item>Future Interaction Lab</item>
        <item>Versuchsraum 4</item>
        <item>Besprechungsraum TB</item>
    </string-array>
    <string-array name="createPresetLocations">
        <item>Regensburg</item>
        <item>Regensburg</item>
        <item>Regensburg</item>
    </string-array>
    <string-array name="createPresetAddress">
        <item>Universitätsstraße 31</item>
        <item>Franz-Mayer-Straße 1</item>
        <item>Franz-Mayer-Straße 1</item>
    </string-array>
    <string-array name="createPresetRooms">
        <item>PT 3.0.27–28</item>
        <item>TB VR4</item>
        <item>TB 1.101</item>
    </string-array>
    <string name="drawerDate">Datum</string>
    <string name="drawerDateFull">Datum - Wochentag - Uhrzeit</string>
    <string name="zeroOwnStudiesHeader">Bisher hast du noch keine Studien erstellt. Wähle im Menü den Reiter Studien erstellen um Studien zu erstellen!</string>
    <string name="ownStudiesHeader">Deine erstellten Studien</string>
    <string name="ownStudyStatusTab">Teilnahmen</string>
    <string name="ownStudyTab">Eigene Studien</string>
    <string name="dateTag">Termin:</string>
    <string name="vpTextTag">VP-Stunden:</string>
    <string name="inputReminder">Bitte erst Matrikelnummer eingeben und die benötigten VP bestätigen</string>
    <string name="duplicateDate">Doppelter Termin</string>
    <string name="addExistingDateWarning">Sie wollen einen bereits vorhandenen Termin erneut hinzufügen. \nWollen Sie in trotzdem fortfahren?</string>
    <string name="entryListHeader">Aktuelles Studienangebot</string>
    <string name="vpHours">VP-Stunden</string>
    <string name="studyTypeText">Studientyp: </string>
    <string name="findStudyHeader">Ausgeschriebene Studien</string>
    <string name="sortStudyText">Sortieren nach: </string>
    <string name="vpText">VPS</string>
    <string name="categoryText">Kategorien</string>
    <string name="executionText">Durchführung</string>
    <string name="fieldStudyText">Feldstudie</string>
    <string name="focusGroupText">Fokusgruppe</string>
    <string name="questionnaireText">Fragebogen</string>
    <string name="interviewText">Interview</string>
    <string name="usabilityText">Usability/UX</string>
    <string name="labStudyText">Laborstudie</string>
    <string name="diaryStudyText">Tagebuchstudie</string>
    <string name="gamingText">Gamingstudie</string>
    <string name="othersText">Sonstige</string>
    <string name="studyViewHeader">Detailansicht - Studie</string>
    <string name="dateListHeader">Verfügbare Termine</string>
    <string name="selected_date_header">Gewählter Termin</string>
    <string name="selected_date_text">Sie haben sich für folgenden Termin eingetragen:</string>
    <string name="createContactInfo">Kontaktmöglichkeit</string>
    <string name="dropDateView">Sie haben sich bereits für einen Termin eingetragen. (für Abmeldung hier kilcken)</string>
    <string name="dropDateQuestion">Möchten Sie sich für diesen Termin wieder austragen?</string>
    <string name="selectDateQuestion">Möchten Sie sich für diesen Termin eintragen?</string>
    <string name="studyViewTabOne">Details</string>
    <string name="studyViewTabTwo">Termine</string>
    <string name="logInSuccessful">Erfolgreich angemeldet!</string>
    <string name="logOutSuccessful">Erfolgreich abgemeldet!</string>
    <string name="elementExpired">Termin ist nicht mehr verfügbar!</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="ok">OK</string>
    <string name="collectionPathUsers">users</string>
    <string name="collectionPathStudies">studies</string>
    <string name="collectionPathDates">dates</string>
    <string name="findStudyCardDescText">Suche nach passenden Studien für deinen Uni-Alltag und sammle VP-Stunden!</string>
    <string name="createStudyCardDescText">Erstelle deine eigenen Studien und präsentiere sie der Ziegruppe!</string>
    <string name="cancelView">Nicht mehr anzeigen</string>
    <string name="add">Hinzufügen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="login_email_address">Email-Adresse</string>
    <string name="login_password">Passwort</string>
    <string name="login_remember_me">Angemeldet bleiben</string>
    <string name="login_forgot_password">Passwort vergessen</string>
    <string name="login_create_account">Registrieren</string>
</resources>