<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    tools:context=".createStudy.createStudyFragment_StepOne_Contact">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7">


        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:text="@string/fragment_create_study_pageOneContactTitle"
            android:textAlignment="center"
            android:textSize="35sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/black" />

<!--        <TextView
            android:id="@+id/pageDesc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="2.8"
            android:text="@string/fragment_create_study_desc_page_one_contact"
            android:textAlignment="center"
            android:textSize="20sp" />-->


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1.25">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputContact1"
                style="@style/You.EditText.Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/fragment_create_study_pageOneContact_Hint_Contact" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputContact2"
                style="@style/You.EditText.Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/fragment_create_study_pageOneContact_Hint_Contact2" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputContact3"
                style="@style/You.EditText.Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/fragment_create_study_pageOneContact_Hint_Contact3" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputContact4"
                style="@style/You.EditText.Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/fragment_create_study_pageOneContact_Hint_Contact4" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputContact5"
                style="@style/You.EditText.Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/fragment_create_study_pageOneContact_Hint_Contact5" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


</FrameLayout>

