<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_vg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_corner" />

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_clear" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:elevation="8dp"
                android:src="@drawable/ic_baseline_info_24" />

            <TextView
                android:id="@+id/info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/duplicateDate"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/duplicate_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/google_sans_regular"
                android:gravity="center_horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/addExistingDateWarning"
                android:textColor="@color/black" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal">

                <CheckBox
                    android:id="@+id/doNotShowAgainCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColorHint="@color/black"
                    android:hint="@string/cancelView"
                    android:buttonTint="@color/heatherred_Main"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="12dp">

                <Button
                    android:id="@+id/abort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelNavigation"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/heatherred_Main"/>

                <Button
                    android:id="@+id/addAnyways"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:backgroundTint="@color/heatherred_Main"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>