<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    tools:context=".views.createStudy.createStudyFragment_StepOne">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6">


        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:text="@string/fragment_create_study_pageOneTitle"
            android:textAlignment="center"
            android:textSize="35sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.05"
            android:background="@color/black" />

        <!--<TextView
            android:id="@+id/pageDesc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="4"
            android:text="@string/fragment_create_study_desc_page_one"
            android:textAlignment="center"
            android:textSize="20sp" />-->


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1.35"
            android:hint="@string/createStudyTitleHint"
            android:textColorHint="@color/heatherred_Main"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/heatherred_Main">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputFieldTitle"
                style="@style/You.EditText.Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1.35"
            android:hint="@string/createOfferedVP"
            android:textColorHint="@color/heatherred_Main"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/heatherred_Main">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputFieldVP"
                style="@style/You.EditText.Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/createOfferedVP" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/createCategories"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="13dp"
            android:layout_weight="1.25"
            android:popupBackground="@color/heatherred_Main" />

        <Spinner
            android:id="@+id/createExecutionType"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="13dp"
            android:layout_weight="1.25"
            android:popupBackground="@color/heatherred_Main" />
    </LinearLayout>

</FrameLayout>

